metadata-classic/objects/ProductFeedback__c.object
<CustomObject>
    <description>Custom object to store feedback records from Thumbtack&apos;s Pros and Customers. Includes product feedback and request form/category feedback.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between case and product feedback custom object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CatGeo__c</fullName>
        <description>The Thumbtack category/market that the feedback pertains to.</description>
        <label>Cat/Geo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategorizationEmail__c</fullName>
        <description>Email address from the case or account when an agent creates feedback.</description>
        <label>Categorization Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChurnEnjoyProAssist__c</fullName>
        <label>Churn Enjoy Instant Match</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnHowEffective__c</fullName>
        <label>Churn How Effective</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnProAssistComments__c</fullName>
        <label>Churn Instant Match Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnProAssistConcerns__c</fullName>
        <label>Churn Instant Match Concerns</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnProAssistExperience__c</fullName>
        <label>Churn Instant Match Experience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnProAssistMeetingNeeds__c</fullName>
        <label>Churn Instant Match Meeting Needs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnProAssistNotMeetingNeeds__c</fullName>
        <label>Churn Instant Match Not Meeting Needs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnReasonforTryingProAssist__c</fullName>
        <label>Churn Reason for Trying Instant Match</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnReturnedtoPAQuestion__c</fullName>
        <label>Churn Returned to IM Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnReturningtoPAComments__c</fullName>
        <label>Churn Returning to IM Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnTurnedOffPAReason__c</fullName>
        <label>Churn Turned Off IM Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnTurningOffPAComment__c</fullName>
        <label>Churn Turning Off IM Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnTurningOnPAPlanQuestion__c</fullName>
        <label>Churn Turning On IM Plan Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnTurningOnPlanComments__c</fullName>
        <label>Churn Turning On Plan Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChurnTurningOnProAssist__c</fullName>
        <label>Churn Turning On Instant Match</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunicationType__c</fullName>
        <description>The type of communication used to gather the feedback.</description>
        <label>Communication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Post-Live</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula to bring over the date/time of when the record was created. Used in reporting.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EngagementBidLikelihood__c</fullName>
        <description>Picklist whose value indicate how likely the pro is to bid after receiving the outbound engagement call.</description>
        <inlineHelpText>How likely is the pro to bid after receiving your call?  If high, then explain in the feedback area what the &apos;aha&apos; moment was for the pro.</inlineHelpText>
        <label>Engagement Bid Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngagementFeedbackSurvey__c</fullName>
        <description>Picklist field whose value indicate which campaign survey is being used.</description>
        <inlineHelpText>Select the appropriate survey based on the campaign you are calling for.</inlineHelpText>
        <label>Engagement Feedback Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Why pros are not bidding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngagementFeedbackType__c</fullName>
        <description>Picklist whose value indicate the answer to a survey question during an engagement call.</description>
        <inlineHelpText>Select the appropriate reason.</inlineHelpText>
        <label>Engagement Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EngagementFeedbackSurvey__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3-4 quotes already in</fullName>
                </value>
                <value>
                    <fullName>Different expectation of TT product</fullName>
                </value>
                <value>
                    <fullName>Disenfranchised with the lack of serious shopping</fullName>
                </value>
                <value>
                    <fullName>Finance burden/injury/outlying circumstances</fullName>
                </value>
                <value>
                    <fullName>Flooded Market</fullName>
                </value>
                <value>
                    <fullName>Jobs are too small/Not enough $$</fullName>
                </value>
                <value>
                    <fullName>Limited education on how to use TT</fullName>
                </value>
                <value>
                    <fullName>Negative Reviews</fullName>
                </value>
                <value>
                    <fullName>Niche category/irrelevant requests</fullName>
                </value>
                <value>
                    <fullName>Not hearing back - no response</fullName>
                </value>
                <value>
                    <fullName>Not hearing back - responding but not hired</fullName>
                </value>
                <value>
                    <fullName>Not hearing back - similar quotes not great quotes</fullName>
                </value>
                <value>
                    <fullName>Not receiving requests outside of limiter</fullName>
                </value>
                <value>
                    <fullName>Pro busy with recurring business</fullName>
                </value>
                <value>
                    <fullName>Pro didn&apos;t know TT would cost money</fullName>
                </value>
                <value>
                    <fullName>Pro is at full capacity with customers</fullName>
                </value>
                <value>
                    <fullName>Pro is busy with life circumstances</fullName>
                </value>
                <value>
                    <fullName>Pro perception of TT performance</fullName>
                </value>
                <value>
                    <fullName>Seasonal, skills</fullName>
                </value>
                <value>
                    <fullName>Travel distance settings not fitting to pro</fullName>
                </value>
                <value>
                    <fullName>Turned off notifications (TT as spam)</fullName>
                </value>
                <value>
                    <fullName>Unable to make TT priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngagementFeedback__c</fullName>
        <description>Open text area to describe any additional feedback the pro had during the campaign call.</description>
        <inlineHelpText>Explain what the &apos;aha&apos; moment for the pro was during the phone call.</inlineHelpText>
        <label>Engagement Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentId__c</fullName>
        <label>Enrollment Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentType__c</fullName>
        <label>Enrollment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackCategory__c</fullName>
        <description>Text area to store the category of the suggestion as entered by a pro / customer on the help center suggestion box.</description>
        <label>Help Center Feedback Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackOwnerName__c</fullName>
        <label>Feedback Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackSuggestionDetails__c</fullName>
        <label>Help Center Feedback Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedbackSuggestionLevel0__c</fullName>
        <label>Help Center Suggestion (Level 0)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account and profile</fullName>
                </value>
                <value>
                    <fullName>Instant Match</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Paying for contacts</fullName>
                </value>
                <value>
                    <fullName>Quoting and payment</fullName>
                </value>
                <value>
                    <fullName>Requests and projects</fullName>
                </value>
                <value>
                    <fullName>Request form feedback</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Add a Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeedbackSuggestionLevel1__c</fullName>
        <label>Help Center Suggestion (Level 1)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FeedbackSuggestionLevel0__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TravelPreferences</fullName>
                    <label>Travel preferences</label>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>LinksToSocialMedia</fullName>
                    <label>Links to social media</label>
                </value>
                <value>
                    <fullName>ProfileCredentials</fullName>
                    <label>Credential(s)</label>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>GeneralProfileFeedback</fullName>
                    <label>General profile feedback</label>
                </value>
                <value>
                    <fullName>QuotingFlow</fullName>
                    <label>Quoting flow</label>
                </value>
                <value>
                    <fullName>Cost to quote</fullName>
                </value>
                <value>
                    <fullName>PaymentMethods</fullName>
                    <label>Payment methods</label>
                </value>
                <value>
                    <fullName>FilteringOrSortingQuotes</fullName>
                    <label>Filtering or sorting quotes</label>
                </value>
                <value>
                    <fullName>Getting feedback from customers</fullName>
                </value>
                <value>
                    <fullName>GeneralFeedback</fullName>
                    <label>General quoting or payment feedback</label>
                </value>
                <value>
                    <fullName>Quality of requests</fullName>
                    <label>Quality of Requests</label>
                </value>
                <value>
                    <fullName>Filtering or sorting requests</fullName>
                </value>
                <value>
                    <fullName>General request or project feedback</fullName>
                </value>
                <value>
                    <fullName>Site expansion</fullName>
                </value>
                <value>
                    <fullName>Grammar, spelling, or layout</fullName>
                </value>
                <value>
                    <fullName>Thumbtack Support or Help Center</fullName>
                </value>
                <value>
                    <fullName>Landing pages or other features</fullName>
                </value>
                <value>
                    <fullName>Things we advertise</fullName>
                </value>
                <value>
                    <fullName>Positive feedback</fullName>
                </value>
                <value>
                    <fullName>Customer app</fullName>
                </value>
                <value>
                    <fullName>Pro app</fullName>
                </value>
                <value>
                    <fullName>How it works</fullName>
                </value>
                <value>
                    <fullName>Process of receiving quotes</fullName>
                </value>
                <value>
                    <fullName>General feedback</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeedbackSuggestionLevel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Suggestion (Level 2)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProductValue__c.ValueType__c</field>
                <operation>notEqual</operation>
                <value>Category</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProductValue__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedbackType__c</fullName>
        <description>L1 Product Categories for feedback sorting</description>
        <inlineHelpText>Please select the type of feedback you received and add details below.</inlineHelpText>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category / Request Form Feedback (eg. adding a category, changing request form)</fullName>
                </value>
                <value>
                    <fullName>Suggestions from Customers</fullName>
                </value>
                <value>
                    <fullName>Data Shared on Website</fullName>
                </value>
                <value>
                    <fullName>Filtering / Sorting Quotes (Pros)</fullName>
                </value>
                <value>
                    <fullName>Filtering / Sorting Requests (Pros)</fullName>
                </value>
                <value>
                    <fullName>Help Center / Contact Thumbtack</fullName>
                </value>
                <value>
                    <fullName>Landing pages / Spotlight / Best of</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Payment Methods</fullName>
                </value>
                <value>
                    <fullName>Mobile Apps</fullName>
                </value>
                <value>
                    <fullName>Polish - Grammar/Spelling/Layout</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Credit Costs / Cost to Quote</fullName>
                </value>
                <value>
                    <fullName>Pro Profile</fullName>
                </value>
                <value>
                    <fullName>Profile credentials (background checks, licenses)</fullName>
                </value>
                <value>
                    <fullName>Pro wants feedback from customers</fullName>
                </value>
                <value>
                    <fullName>Quality of Leads</fullName>
                </value>
                <value>
                    <fullName>Quote Flow</fullName>
                </value>
                <value>
                    <fullName>Quoting Service</fullName>
                </value>
                <value>
                    <fullName>Request Features</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>Site expansion</fullName>
                </value>
                <value>
                    <fullName>Education / Help / Support</fullName>
                </value>
                <value>
                    <fullName>Travel Preferences</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Paying for contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HelpCenterSuppliedEmail__c</fullName>
        <description>The email address of the site visitor that provided the suggestion.</description>
        <label>Help Center Supplied Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HelpCenterSuppliedName__c</fullName>
        <description>The full name of the site visitor who submitted the suggestion.</description>
        <label>Help Center Supplied Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to a Lead object record.  The lead that originated the feedback.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveComments__c</fullName>
        <label>Live Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveDisputeType__c</fullName>
        <label>Live Dispute Type</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveProAssistOffQuestion__c</fullName>
        <label>Live Instant Match Off Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveQuotingQuesiton__c</fullName>
        <label>Live Quoting Quesiton</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveSettingsQuestion__c</fullName>
        <label>Live Settings Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveWhyProCalledIn__c</fullName>
        <label>Live Why Pro Called In</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardAvailabilitySetupComment__c</fullName>
        <description>Open text area to store any comments the pro had about the availability calendar setup.</description>
        <label>Onboard Availability Setup Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardAvailabilitySetup__c</fullName>
        <description>Picklist whose values describe if the pro had any questions about availability calendar setup.</description>
        <label>Onboard Availability Setup</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process is tedious</fullName>
                </value>
                <value>
                    <fullName>Not enough flexibility / customization</fullName>
                </value>
                <value>
                    <fullName>Already has a calendar tool / doesn&apos;t want to update multiple calendars</fullName>
                </value>
                <value>
                    <fullName>Pro already set up</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardCustomMessagingComment__c</fullName>
        <description>Comment field for custom messaging field.</description>
        <label>Onboard Custom Messaging Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardCustomMessaging__c</fullName>
        <description>Picklist to describe how well the pro understood the custom messaging onboarding step.</description>
        <label>Onboard Custom Messaging</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not clear what to include in the messaging</fullName>
                </value>
                <value>
                    <fullName>Message is not customizable / dynamic enough</fullName>
                </value>
                <value>
                    <fullName>Concerned about losing personal touch</fullName>
                </value>
                <value>
                    <fullName>Pro does not want to include a message in their quote</fullName>
                </value>
                <value>
                    <fullName>Pro already set up</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardPaymentsandBillingComment__c</fullName>
        <description>Open text area to store comments pertaining to the onboarding payments and billing process.</description>
        <label>Onboard Payments and Billing Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardPaymentsandBilling__c</fullName>
        <description>Picklist to indicate if the pro had any questions about the program&apos;s payment and billing process.</description>
        <label>Onboard Payments and Billing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price to quote is too high</fullName>
                </value>
                <value>
                    <fullName>Difficult to predict the cost of customer contact / credit range is too wide</fullName>
                </value>
                <value>
                    <fullName>Does not want to provide credit card information</fullName>
                </value>
                <value>
                    <fullName>Wants more control over spend and budgeting</fullName>
                </value>
                <value>
                    <fullName>Pro already set up</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardPricingFormsComment__c</fullName>
        <description>Comment field for pricing forms field.</description>
        <label>Onboard Pricing Forms Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardPricingForms__c</fullName>
        <description>Picklist to describe how well the pro understood the onboarding pricing forms.</description>
        <label>Onboard Pricing Forms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro&apos;s pricing structure is not captured by the pricing model</fullName>
                </value>
                <value>
                    <fullName>Needs a different add-on option(s)</fullName>
                </value>
                <value>
                    <fullName>Needs to price add-ons differently</fullName>
                </value>
                <value>
                    <fullName>Not enough flexibility</fullName>
                </value>
                <value>
                    <fullName>It takes too much time to complete</fullName>
                </value>
                <value>
                    <fullName>Pro already set up</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardRequestPreferencesComment__c</fullName>
        <description>Open text area to store comments about what request preference questions the pro had during onboarding.</description>
        <label>Onboard Request Preferences Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardRequestPreferences__c</fullName>
        <description>Picklist to describe if the pro had questions about setting up their request preferences.</description>
        <label>Onboard Request Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Setup doesn&apos;t capture the pro&apos;s setting preferences</fullName>
                </value>
                <value>
                    <fullName>Setup process is too long</fullName>
                </value>
                <value>
                    <fullName>Trouble using map tool to set up travel preferences</fullName>
                </value>
                <value>
                    <fullName>Lack of control</fullName>
                </value>
                <value>
                    <fullName>Pro already set up</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnboardingAutoReloadComments__c</fullName>
        <label>Onboarding Auto Reload Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingAvailabilityComment__c</fullName>
        <label>Onboarding Availability Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingAvailabilityQuestions__c</fullName>
        <label>Onboarding Availability Questions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingBillingComments__c</fullName>
        <label>Onboarding Billing Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingBillingQuestions__c</fullName>
        <label>Onboarding Billing Questions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingCalendarComment__c</fullName>
        <label>Onboarding Calendar Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingJobPreferences__c</fullName>
        <label>Onboarding Job Preferences</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingMessagingComments__c</fullName>
        <label>Onboarding Messaging Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingMessagingQuestions__c</fullName>
        <label>Onboarding Messaging Questions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingPreferencesMissingDetails__c</fullName>
        <label>Onboarding Preferences Missing Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingPricingComments__c</fullName>
        <label>Onboarding Pricing Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingPricingSetup__c</fullName>
        <label>Onboarding Pricing Setup</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingPricingStructureAddons__c</fullName>
        <label>Onboarding Pricing Structure Add-ons</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnboardingPricingStructureDetails__c</fullName>
        <label>Onboarding Pricing Structure Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <label>Onboarding Job Preference Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherFeedback__c</fullName>
        <description>Open text area to store other relevant feedback.</description>
        <label>Other Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachConversionComments__c</fullName>
        <label>Outreach Conversion Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachConversion__c</fullName>
        <inlineHelpText>Did the pro want to move ahead with onboarding?</inlineHelpText>
        <label>Outreach Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No, not interested in Instant Match</fullName>
                </value>
                <value>
                    <fullName>No, pro will complete onboarding on their own at a later time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>